Xây dựng api account, trailer, comment

--- a/HKCCinemas/appsettings.json
+++ b/HKCCinemas/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "HKCCinemasContext": "Data Source=ADMIN\\MSSQLSERVER2;Initial Catalog=HKCCinemas;Integrated Security=True"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:5174",
+    "ValidIssuer": "http://localhost:7253",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
