Sửa API và thêm unique cho email, username

--- a/HKCCinemas/appsettings.json
+++ b/HKCCinemas/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HKCCinemasContext": "Server=ADMIN\\MSSQLSERVER2;Database=HKCCinemas;User Id=sa;Password=cuong10a32k3hlbn;"
+    "HKCCinemasContext": "Server=tcp:hkccinemas.database.windows.net,1433;Initial Catalog=HKCCinemasDB;Persist Security Info=False;User ID=cuong03pl;Password=Cuong10a32k3hlbn;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JWT": {
     "ValidAudience": "https://localhost:5174",
