Viết API xử lý gửi email

--- a/HKCCinemas/appsettings.json
+++ b/HKCCinemas/appsettings.json
@@ -14,6 +14,13 @@
     "ValidIssuer": "http://localhost:7253",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
+  "MailSettings": {
+    "Mail": "cuongculebarca@gmail.com",
+    "DisplayName": "Hoang Kim Cuong",
+    "Password": "imwxmrprwmkcyxbk",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 
   //"Urls": "http://localhost:7253/"
 
